jinfer: add CLI commands